# casadi-nlp

./: .cmd  .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-tests.txt  requirements.txt  test_requirements.txt  tmp.py
.github/workflows/: ci.yml  test-dev.yml  test-experimental.yml  test-main.yml  test.yml  tests.yml
docs/: .readthedocs.yaml  author.rst  banners.rst  conf.py  features.rst  getting-started.rst  index.rst  installation.rst  module-reference.rst  motivating-example.rst  references.bib  requirements-docs.txt  sg_execution_times.rst
docs/_static/: switcher.json
examples/: README.rst  chain.py  multistart_nlp.py  nlp_scaling.py  nlp_with_multistart.py  optimal_ctrl.py  rosenbrock.py  scaling.py  scenario_approach_for_mpc.py  sensitivity-comparison.py  sensitivity-more.py  sensitivity.py  sensitivity3d.py
examples/integer-programming/: README.rst  milp_and_miqp.py
examples/multistart/: README.rst  nlp_with_multistart.py
examples/optimal_control/: README.rst  hpipm.py  linear_mpc.py  mpc_for_pwa_system.py  mpc_multiple_scenarios.py  open_loop.py  pwa_mpc.py  scenario_approach_for_mpc.py
examples/scaling/: README.rst  nlp_scaling.py
examples/sensitivity/: README.rst  comparison_sensitivities.py  simple_sensitivity.py  simple_sensitivity_3d.py
src/casadi_mpc/: __init__.py  debug.py  generic_mpc.py  math.py  solutions.py  util.py
src/casadi_mpc/wrappers/: __init__.py  differentiable_mpc.py
src/casadi_nlp/: __init__.py  debug.py  math.py  nlp.py  solutions.py  util.py
src/casadi_nlp/wrappers/: __init__.py  differentiable_nlp.py  wrapper.py
src/csnlp/: __init__.py  debug.py  multistart_nlp.py  nlp.py  solutions.py  util.py
src/csnlp/core/: __init__.py  cache.py  constraints.py  data.py  debug.py  derivatives.py  objective.py  parameters.py  scaling.py  solutions.py  variables.py
src/csnlp/multistart/: __init__.py  multistart_nlp.py  startpoints.py
src/csnlp/nlp/: funcs.py  multistart_nlp.py  nlp.py  solutions.py
src/csnlp/nlp/core/: constraints.py  objective.py  parameters.py  variables.py
src/csnlp/nlps/: __init__.py  constraints.py  multistart_nlp.py  nlp.py  objective.py  parameters.py  variables.py
src/csnlp/util/: __init__.py  array.py  casadi.py  data.py  derivatives.py  docs.py  funcs.py  io.py  math.py  plot.py  random.py  scaling.py  tools.py
src/csnlp/wrappers/: __init__.py  differentiable_nlp.py  mpc.py  scaling.py  sensitivity.py  wrapper.py
src/csnlp/wrappers/mpc/: hybrid_mpc.py  mpc.py  multi_scenario_mpc.py  pwa_mpc.py  scenario_based_mpc.py
tests/: example_data.mat  examples_data.mat  test_core.py  test_debug.py  test_examples.py  test_generic_mpc.py  test_math.py  test_multistart.py  test_multistart_nlp.py  test_nlp.py  test_nlps.py  test_quadrotor_mpc.py  test_solutions.py  test_util.py  test_wrappers.py  test_wrappers_mpc.py
