[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "csnlp"
authors = [
  { name="Filippo Airaldi", email="filippoairaldi@gmail.com" },
]
description = "Nonlinear Progamming with CasADi"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy >= 1.21.6, < 2.0.0 ; python_version <= '3.9'",
    "casadi >= 3.6.0",
    "joblib >= 1.4.0",
    "typing_extensions ; python_version <= '3.10'",
]
keywords = ["nonlinear-optimization", "casadi", "sensitivity-analysis"]
dynamic = ["version"]

[project.optional-dependencies]
all = [
    "matplotlib >= 3.6.2",
    "tikzplotlib >= 0.10.1",
]

[project.urls]
"Homepage" = "https://github.com/FilippoAiraldi/casadi-nlp"
"Bug Tracker" = "https://github.com/FilippoAiraldi/casadi-nlp/issues"

[tool.setuptools.dynamic]
version = {attr = "csnlp.__version__"}

[tool.ruff.lint]  # https://docs.astral.sh/ruff/rules
extend-select = [
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C4",
    "E",
    "F",
    "FURB",
    "I",
    "NPY",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "T10",
    "TC",
    "UP",
    "W",
]
extend-ignore = ["ANN401", "B019", "E402", "E731", "PLC0415", "PLR"]

[tool.ruff.lint.extend-per-file-ignores]
"**/{tests,docs,examples}/*" = ["ANN", "B", "NPY", "PL", "RUF"]

[tool.mypy]
python_version = "3.9"
plugins = ["numpy.typing.mypy_plugin"]
exclude = ["tests"]

[[tool.mypy.overrides]]
module = [
    "casadi.*",
    "matplotlib.*",
    "cycler.*",
    "tikzplotlib.*",
    "scipy.*",
    "parameterized.*",
    "csnlp.*",
    "blosc2.*",
    "brotli.*",
    "joblib.*"
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "examples/*",
    "src/csnlp/util/docs.py",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
sort = "miss"
